# gulp-sdk

./: .gitignore  README.md  build_and_upload_pypi.py  coverage.xml  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: python-package.yml
docs/: api_reference.md  index.md  quickstart.md
docs/examples/: basic_usage.py  collab_notes_links.py  context_source_management.py  index.md  ingest_raw.py  query_external_elasticsearch.py  query_gulp_preview.py  request_status_vs_polling.py  storage_list_files.py  websocket_monitoring.py
src/gulp_sdk/: __init__.py  _version.py  client.py  exceptions.py  models.py  pagination.py  utils.py  websocket.py
src/gulp_sdk/api/: __init__.py  acl.py  auth.py  collab.py  db.py  documents.py  enrich.py  ingest.py  operations.py  plugins.py  queries.py  request_utils.py  storage.py  user_groups.py  users.py
tests/integration/: test_enrich.py  test_smoke_sdk_roundtrip.py
tests/unit/: test_api_wrappers.py  test_basics.py  test_client_version.py  test_client_websocket_advanced.py  test_client_ws_events.py  test_coverage_finish.py  test_models.py  test_pagination.py  test_request_utils.py  test_request_wait_ws.py  test_websocket.py
