[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/muty/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[project]
name = "gulp-sdk"
dynamic = ["version"]
authors = [
    {name = "valerino", email = "valerino@mentat.is"}
]
description = "Python SDK for Gulp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
]
docs = [
    "mkdocs>=1.5",
    "mkdocstrings[python]>=0.23",
]

[tool.setuptools]
packages = ["gulp_sdk"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring live server",
    "e2e: End-to-end tests",
    "stress: Stress / load tests requiring live server",
]

[tool.coverage.run]
source = ["gulp_sdk"]
omit = ["*/tests/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "^\t*pass$",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
