[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/gulp_sdk/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[project]
name = "gulp-sdk"
dynamic = ["version"]
authors = [
    {name = "valerino", email = "valerino@mentat.is"}
]
description = "Python SDK for Gulp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.1",
    "websockets==16.0",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
]

[tool.setuptools]
packages = ["gulp_sdk"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring live server",
    "e2e: End-to-end tests",
    "stress: Stress / load tests requiring live server",
]

[tool.coverage.run]
source = ["gulp_sdk"]
omit = ["*/tests/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "^\t*pass$",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
